sektor/ops/k8s/overlays/staging/patch-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sektor-staging
  labels:
    nafura.io/app: sektor-btp
    nafura.io/env: staging
