sektor/ops/k8s/overlays/staging/patch-backend-infra.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sektor-btp-backend
spec:
  template:
    metadata:
      annotations:
        vault.hashicorp.com/agent-inject-address: "http://vault.nafura-infra-staging.svc:8200"
    spec:
      containers:
        - name: sektor-btp-backend
          imagePullPolicy: IfNotPresent
