sektor/ops/k8s/overlays/staging/patch-frontend-local.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sektor-btp-web
spec:
  template:
    spec:
      containers:
        - name: sektor-btp-web
          imagePullPolicy: IfNotPresent
